jEdit 5.6 version history
       (changes since jEdit 5.5.0)
:encoding=UTF-8:

{{{ Version 5.6pre1

Thanks to Björn "Vampire" Kautler, Matthieu Casanova, Hrotkó Gábor,
Alan Ezust, and Dale Anson for contributing to this release.

{{{ Bug Fixes

- Do not only highlight the first match in hypersearch results
  (#4083 - Matthieu Casanova)

- Re-add missing help viewer back and forward icons (Björn "Vampire" Kautler)

- Fix wrong behavior of input method framework support that returned wrong
  locations for offsets and wrong offsets for locations
  (#4082 - Björn "Vampire" Kautler)

- Upgrade OS X launcher stub to be compatible with newer Java versions
  (#4077 - Björn "Vampire" Kautler)

- Fix Untitled Issue with -background command line option
  (Patch #617 - Hrotkó Gábor)

- Handle case where user has not set either a backup prefix or suffix
  (#4069 - Dale Anson)

- Fix odd default colors for style editor (#4055 - Dale Anson)

- Fix NullPointerException in Preview Javadoc macro (#2412 - Dale Anson)

- Fix dockable buttons not wrapping correctly (#2626 - Dale Anson)

- Fix electric scroll not working with page up/down (#2719 - Dale Anson)

- Correct location of context menu popup (#4073 - Dale Anson)

- Fix file browser splitter buttons not working (#4081 - Dale Anson)

}}}
{{{ Miscellaneous

- Apply UI language changes immediately without the need to restart.
  (Björn "Vampire" Kautler)

- The tray icon on Linux systems now by default tries to detect the proper
  background color and also lets the user either select a fixed color for
  the background or select some arbitrary rectangle as background for the
  tray icon, making the icon much less ugly on dark themes.
  (Björn "Vampire" Kautler)

- The Windows EXE launcher now considers JAVA_HOME environment variable if no
  matching Java is found in the registry (Björn "Vampire" Kautler)

- The Windows installer now uses modern and resizable style and allows